kubernetes/apps/policy/kyverno/policies/custom/inject-velero-backup-defaults.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/kyverno.io/clusterpolicy_v1.json

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-velero-backup-defaults
spec:
  background: false
  rules:
    - name: mutate-velero-backups
      match:
        any:
          - resources:
              kinds:
                - velero.io/v1/Backup
      mutate:
        patchStrategicMerge:
          spec:
            +(excludedNamespaces):
              - velero
            +(excludedResources):
              - datauploads.velero.io

    - name: mutate-velero-schedules
      match:
        any:
          - resources:
              kinds:
                - velero.io/v1/Schedule
      mutate:
        patchStrategicMerge:
          spec:
            template:
              +(excludedNamespaces):
                - velero
              +(excludedResources):
                - datauploads.velero.io
